chore: plantilla prácticas initial commit

--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 % Packages %
 %%%%%%%%%%%%
 
-\usepackage[english]{babel}
+\usepackage[spanish]{babel}
 \usepackage{packages/sleek}
 \usepackage{packages/sleek-title}
 \usepackage{packages/sleek-theorems}
@@ -15,15 +15,15 @@
 %%%%%%%%%%%%%%
 
 \logo{./resources/pdf/logo.pdf}
-\institute{Random University}
-\faculty{Faculty of Whatever Sciences}
-%\department{Department of Anything but Psychology}
-\title{A sleek \LaTeX{} template}
-\subtitle{With a sleeker title-page}
-\author{\textit{Author}\\François \textsc{Rozet}}
+\institute{Escuela Politécnica Superior de Sevilla}
+\faculty{Grado en Ingeniería Eléctrica\\ Doble Grado en Ingeniería Electríca y Mecánica}
+\department{Departamento de Tecnología Electrónica}
+\title{Práctica 1:\\ Familiarización con el Instrumental del Laboratorio}
+% \subtitle{Familiarización con el Instrumental del Laboratorio}
+% \author{\textit{Author}\\François \textsc{Rozet}}
 %\supervisor{Linus \textsc{Torvalds}}
 %\context{A long time ago in a galaxy far, far away...}
-\date{\today}
+% \date{\today}
 
 %%%%%%%%%%%%%%%%
 % Bibliography %
