chore: plantilla prácticas update

--- a/main.tex
+++ b/main.tex
@@ -15,10 +15,27 @@
 %%%%%%%%%%%%%%
 
 \logo{./resources/pdf/logo.pdf}
-\institute{Escuela Politécnica Superior de Sevilla}
-\faculty{Grado en Ingeniería Eléctrica\\ Doble Grado en Ingeniería Electríca y Mecánica}
+\objetivos{\begin{itemize}
+  \item Objetivo Uno 
+  \item Objetivo Dos 
+  \item Objetivo Tres
+\end{itemize}}
+\instrumentacion{\begin{itemize}
+  \item Instrumento Uno 
+  \item Instrumento Dos 
+  \item Instrumento Tres
+\end{itemize}}
+\componentes{\begin{itemize}
+  \item Componente Uno 
+  \item Componente Dos 
+  \item Componente Tres
+\end{itemize}
+}
+\grado{Grado en Ingeniería Eléctrica\\ Doble Grado en Ingeniería Eléctrica y Mecánica}
 \department{Departamento de Tecnología Electrónica}
 \title{Práctica 1:\\ Familiarización con el Instrumental del Laboratorio}
+\asignatura{Electrónica Industrial}
+\curso{2025/2026}
 % \subtitle{Familiarización con el Instrumental del Laboratorio}
 % \author{\textit{Author}\\François \textsc{Rozet}}
 %\supervisor{Linus \textsc{Torvalds}}
